<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="helloKhoslaLabs">KhoslaLabs</string>
    <string name="clickme">click Here</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="fastforward">fast</string>
    <string name="rewind">rewind</string>
    <string name="firstfragment">This is first page</string>
    <string name="secondfragment">This is second page</string>
    <string name="details">DETAILS</string>

</resources>
